Agregado Div contenedor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Git vscode</title>
 </head>
 <body>
-  
+  <h1>Hola</h1>
+
+<!--Div Contenedor-->
+<div class="container">
+  <div class="row">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+  </div>
+</div>
+
 </body>
 </html>
