--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Hola</h1>
 
-<!--Div Contenedor-->
+<!--Div Contenedor 2-->
 <div class="container">
   <div class="row">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
